Add marginalia and autodoc output directory targets