@@ -57,6 +57,16 @@
               </execution>
             </executions>
           </plugin>
+          <plugin>
+            <groupId>com.theoryinpractise</groupId>
+            <artifactId>clojure-maven-plugin</artifactId>
+            <configuration>
+              <clojureOptions>-Xmx512m -Djava.awt.headless=true -XX:MaxPermSize=256m -Dssh.username=testuser</clojureOptions>
+
+              <autodocTargetDirectory>autodoc/autodoc</autodocTargetDirectory>
+              <marginaliaTargetDirectory>autodoc/marginalia</marginaliaTargetDirectory>
+            </configuration>
+          </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -122,6 +132,12 @@
             </exclusion>
           </exclusions>
         </dependency>
+        <dependency>
+          <groupId>marginalia</groupId>
+          <artifactId>marginalia</artifactId>
+          <version>0.5.0-alpha</version>
+          <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -183,7 +199,6 @@
             <plugin>
               <groupId>com.theoryinpractise</groupId>
               <artifactId>clojure-maven-plugin</artifactId>
-              <version>1.3.6</version>
               <configuration>
                 <clojureOptions>-Xmx512m -Djava.awt.headless=true -XX:MaxPermSize=256m -Dssh.username=testuser</clojureOptions>
               </configuration>
